--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/prjPOOEricThalles.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.hsqldb.jar=lib\\hsqldb.jar
+file.reference.jackcess-2.1.3.jar=lib\\jackcess-2.1.3.jar
+file.reference.ucanaccess-3.0.3.1.jar=lib\\ucanaccess-3.0.3.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.jackcess-2.1.3.jar}:\
+    ${file.reference.ucanaccess-3.0.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
